# clyro

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SDK_WALKTHROUGH.md  SECURITY.md  claude-code-policy.example.yaml  claude_code_hooks_architecture.md  mcp_wrapper_architecture.md  pyproject.toml
.github/workflows/: CODEOWNERS  ci.yml  codeql.yml  publish.yml
clyro/: __init__.py  audit.py  cli.py  config.py  constants.py  cost.py  evaluation.py  exceptions.py  local_logger.py  local_policy.py  loop_detector.py  model_selector.py  otlp_exporter.py  policy.py  quota_prompt.py  redaction.py  session.py  telemetry_client.py  trace.py  transport.py  wrapper.py
clyro/adapters/: __init__.py  anthropic.py  claude_agent_sdk.py  crewai.py  generic.py  langgraph.py
clyro/backend/: __init__.py  agent_registrar.py  circuit_breaker.py  cloud_policy.py  event_queue.py  http_client.py  sync_manager.py  trace_event_factory.py
clyro/hooks/: __init__.py  audit.py  backend.py  cli.py  config.py  constants.py  evaluator.py  models.py  policy_loader.py  state.py  tracer.py
clyro/mcp/: __init__.py  __main__.py  audit.py  cli.py  errors.py  log.py  prevention.py  router.py  session.py  terminal.py  transport.py
clyro/storage/: __init__.py  sqlite.py
clyro/storage/migrations/: __init__.py  manager.py
clyro/workers/: __init__.py  sync_trace_buffer.py  sync_worker.py
docs/hooks/: claude_code_hooks.md
docs/mcp/: mcp_wrapper.md
docs/otel/: opentelemetry.md
docs/policy/: cx_policy.md
docs/sdk/: anthropic.md  claude_agent_sdk.md  crewai.md  langgraph.md
tests/: conftest.py  test_migrations.py
tests/hooks/: conftest.py
tests/hooks/integration/: test_evaluate_flow.py  test_state_persistence.py  test_trace_flow.py
tests/hooks/unit/: test_audit.py  test_backend.py  test_cli.py  test_config.py  test_error_context.py  test_evaluator.py  test_models.py  test_policy_loader.py  test_state.py  test_tracer.py
tests/integration/: test_imports.py  test_langgraph_integration.py  test_parity.py  test_sdk_integration.py  test_subpackage_isolation.py
tests/mcp/: conftest.py
tests/mcp/e2e/: test_e2e_wrapper.py
tests/mcp/integration/: test_full_flow.py
tests/mcp/unit/: test_audit.py  (+15 more)
tests/sdk/: __init__.py  test_anthropic_adapter.py  test_background_sync.py  test_claude_agent_sdk.py  test_cli.py  test_cli_status.py  test_concurrency.py  test_config.py  test_cost.py  test_crewai_adapter.py  test_estimate_cost.py  test_exceptions.py  test_execution_controls.py  test_generic_adapter.py  test_jwt_wrapper.py  test_langgraph_adapter.py  test_llm_call_output_field.py  test_local_logger.py  test_local_mode_integration.py  test_local_policy.py  test_loop_detector.py  test_model_selector.py  test_otlp_config.py  test_otlp_exporter.py  test_performance.py  test_policy.py  test_quota_prompt.py  test_sdk003_acceptance.py  test_session.py  test_storage.py  test_sync_worker.py  test_telemetry_client.py  test_trace.py  test_transport.py  test_wrapper.py  test_wrapper_refactoring.py
(+9 files in other folders)
